Fixed scroll jump when opening hamburger menu with `lenis.stop()`, aesthetic refinement

--- a/styles.css
+++ b/styles.css
@@ -161,8 +161,9 @@
         color: var(--color-text);
         position: fixed;
         cursor: none;
+        overflow: hidden;
     }
-    body { margin: 0; overflow: hidden; }
+    body { margin: 0; }
     header {
         position: fixed;
         inset: 0 0 auto 0;
@@ -170,10 +171,6 @@
         border: none;
         z-index: 10;
         mix-blend-mode: difference;
-        transition: background-color .5s cubic-bezier(0.075, 0.82, 0.165, 1), transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
-    }
-    header.hide {
-        transform: translateY(-100px);
     }
     nav {
         display: flex;
@@ -221,7 +218,12 @@
         justify-content: space-between;
         align-items: center;
         flex-basis: 100%;
-        
+        transition: opacity .5s cubic-bezier(0.075, 0.82, 0.165, 1), transform 1s cubic-bezier(0.075, 0.82, 0.165, 1), visibility .5s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+    .header-content.hide {
+        opacity: 0;
+        transform: translateY(-50px);
+        visibility: hidden;
     }
 
     .header-content :is(.header-left, .header-center, .header-right) {
@@ -285,7 +287,8 @@
         height: 100dvh;
         position: fixed;
         inset: 0;
-        background-color: rgba(0, 0, 0, 0.98);
+        background-color: rgba(0, 0, 0, 0.9);
+        backdrop-filter: blur(20px);
         z-index: 1;
         padding: 70px 58px 50px;
         display: flex;
@@ -304,7 +307,6 @@
         gap: 6px;
     }
 
-    
     .menuButton {
         width: 100%;
         padding: 8px 0;
@@ -390,6 +392,7 @@
     }
     html:has(.hero.loaded), html:has(.hero.backToPos) {
         position: relative;
+        width: 100%;
         overflow-y: auto;
     }
     .hero.loaded .hero-center h1 {
@@ -531,13 +534,13 @@
         z-index: 3;
     }
 
-    hamburger.no-pointer {
+    .hamburger.no-pointer {
         pointer-events: none;
     }
 
     .noscroll {
-        position: fixed;
-        width: 100vw;
+        touch-action: none;
+        overflow: hidden !important;
     }
 
     header:has(.hamburger-menu:not(.hidden)) nav {
